--- a/mapsForStoryboard.qmd
+++ b/mapsForStoryboard.qmd
@@ -2792,10 +2792,10 @@ all_position <- read_csv("./hierarchy_analysis_results/relativePosition.csv")
 all_pk <- read_csv("./hierarchy_analysis_results/flowPermanence.csv")
 all_uaa <- read_csv("./hierarchy_analysis_results/drainageArea.csv")
 
-
+sults_so_far_avgday <- sults_so_far
 sults_so_far <- rbind(all_position,
                       all_pk,
-                      all_curvature,
+                      #all_curvature,
                       #all_acc_uaa
                       #all_nt,
                       all_uaa
@@ -2959,8 +2959,9 @@ geom_density(alpha = 0.5)+
 
 #FINAL DENSITY PLOTS
 
+#######THIS ONE
 sults_so_far %>% 
-  filter(timescale %in% c("4hr", "daily")) %>% 
+  filter(timescale != "4hr") %>% 
   ggplot(aes(x = prop, y = after_stat(density))) +
 geom_density(aes(fill = shed, color = shed), alpha = 0.5)+
     geom_density(alpha = 0.5, lty = 3)+
@@ -6246,10 +6247,10 @@ all_slope_combo <- rbind(calc_props(routes_w3, "W3"),
 sults_so_far <- rbind(all_position_combo,
                       all_pk_combo,
                       #all_nt_combo,
-                      all_uaa_combo,
+                     # all_uaa_combo,
                       #all_tpi_combo,
                       all_slope_combo,
-                      all_twi_combo
+                      #all_twi_combo
                       ) %>% 
   mutate("real_or_random" = "real")
   mutate(timescale = fct_relevel(timescale,
@@ -6495,7 +6496,13 @@ test %>%
   filter(timescale == "daily") %>% 
   reframe(max_prop = max(prop),
     down1 = down[which(prop == max(prop))]) %>% 
-  filter(max_prop != 0, !down1 %in% c("r_12", "r_19", "r_20"))
+  filter(max_prop != 0) %>% View()#, !down1 %in% c("r_12", "r_19", "r_20"))
+
+test %>% 
+  filter(timescale == "30mins") %>% 
+  ungroup() %>% 
+  select(up, down, prop) %>% View()
+  group_by(up) 
 
 edges <- test %>% 
   group_by(up, timescale) %>%
@@ -6503,14 +6510,24 @@ edges <- test %>%
   reframe(max_prop = max(prop),
     down1 = down[which(prop == max(prop))]) %>% 
   filter(max_prop != 0, !down1 %in% c("r_12", "r_19", "r_20")) %>% 
-  select(up, down1)
+  select(down1, up)
 
   # create the network object
 network <- graph_from_data_frame(d=edges, directed=T) 
 
 # plot it
-igraph_options(label.cex = 2, arrow.size = 0.1)
-plot(network)
+plot(network,layout = layout_nicely(network), edge.arrow.size = 0.25,
+     vertex.size = 20,
+     vertex.label.cex = 1)
+
+#greedy algorithm
+mst <- mst(network)
+
+    # Visualize the MST (optional)
+    plot(mst, layout = layout_nicely(mst), vertex.label = V(mst)$name,
+         edge.arrow.size = 0.25,
+     vertex.size = 20,
+     vertex.label.cex = 1)
   
 test %>% 
   group_by(up, timescale) %>%
@@ -6520,6 +6537,18 @@ test %>%
   group_by(down1, timescale) %>%
   summarise(count = length(down1)) %>% 
   pivot_wider(id_cols = down1, names_from = timescale, values_from = count)
+```
+
+Try calculating transfer energy
+```{r experimenting-transfer-energy}
+p_load(RTransferEntropy)
+
+shannon_te <- transfer_entropy(test2[,1], test2[,2])
+shannon_te
+
+calc_te(test2[,1], test2[,2])
+calc_te(test2[,2], test2[,1])
+
 ```
 
 ###last task- generate random numbers, see if they are hierarchical
@@ -8264,7 +8293,9 @@ If there are -1 and 1, I can determine where they are symmetrical?
 
 Or just at every time step, see if a flowing sensor follows hierarchy
 
-```{r}
+What I ended up doing- lagged the flow state by one after sorting by flow permanence, and determined how many sensors at each timestep were flowing when they should not be according to sequence or hierarchy. Totalled for each timestep, and showed proportion of ones that obeyed the hierarchy through time/along hydrograph.
+
+```{r figure-out-how-to-count}
 pks_w3
 filter(input_w3, datetime == ymd_hms("2023-07-03 16:30:00")) %>% 
   left_join(pks_w3, by = "ID") %>% 
@@ -8275,7 +8306,7 @@ filter(input_w3, datetime == ymd_hms("2023-07-03 16:30:00")) %>%
   filter(following == -1) %>% 
   summarise(count = length(following))
 ```
-```{r}
+```{r calculate-how-many-follow-sequence}
 sequential <- input_w3 %>% 
   left_join(pks_w3, by = "ID") %>%
   group_by(datetime) %>% 
@@ -8299,7 +8330,7 @@ final <- left_join(sequential, total, by = "datetime") %>%
   mutate(prop = count_non/count_all)
   
 ```
-```{r}
+```{r plot-along-discharge}
 ggplot(q_23_f, aes(x  = DATETIME, y = Q_mm_day))+
   geom_line()+
   labs(title = "Discharge from W3, July to Nov 2023",
@@ -8337,4 +8368,159 @@ q_24_bind %>%
                        theme(rect = element_rect(fill = "transparent", color = NA))
 ```
 
-Plot of discharge versus threshold flow permanence
+Plot of discharge versus threshold flow permanence?
+#OG analysis, but average flow state at coarser timesteps
+All I have to do is create a new fantastic four function I believe, that will calculate average state instead of filtering to everyday at noon or whatever
+```{r}
+fantastic_four <- function(routes, shed){
+  theFour <- c("30mins", "hourly", "daily")
+  
+  for(q in 1:length(theFour)){
+    #if statements to detect timescale, calculate appropriate inputs
+    timescale <- theFour[q]
+  if(timescale == "30mins"){
+    input <- rbind(input_w3, input_fb, input_zz) %>%
+      filter(wshed == shed, mins %in% c(0, 30)) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- minutes(30)
+  } 
+  else if(timescale == "hourly"){
+    input <- rbind(input_w3, input_fb, input_zz) %>%
+       filter(wshed == shed, mins %in% 0) %>% 
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- hours(1)
+  } 
+  else if(timescale == "4hr"){
+    input <- rbind(input_w3, input_fb, input_zz) %>%
+      filter(wshed == shed) %>% 
+      group_by(ID) %>% 
+      mutate(group_id = (row_number() - 1) %/% 8 + 1) %>% 
+      ungroup() %>% 
+      group_by(group_id, ID) %>%
+      summarise(avg_state = mean(binary),
+                datetime = min(datetime)) %>% 
+      ungroup() %>% 
+      mutate(avg_state = round(avg_state)) %>% 
+      rename("binary" = avg_state) %>% 
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+    arrange(datetime) %>% 
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- hours(4)
+  } 
+  else if(timescale == "daily"){
+    input <- rbind(input_w3, input_fb, input_zz) %>%
+      filter(wshed == shed) %>% 
+      mutate(
+             "day" = day(datetime),
+             "month" = month(datetime),
+             "year" = year(datetime)) %>% 
+      group_by(day, month, year, ID) %>%
+      summarise(avg_state = mean(binary)) %>% 
+      ungroup() %>% 
+      mutate(avg_state = round(avg_state)) %>% 
+      rename("binary" = avg_state) %>% 
+      mutate("datetime" = ymd_hms(paste0(year,"-",month,"-",day," ","00:00:00"))) %>% 
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+          arrange(datetime) %>% 
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- days(1)
+  } 
+  else {
+    stop("Not a timescale anticipated!")
+  }
+    out <- calculate_hierarchy(routes, input, timestep)
+    out$timescale <- theFour[q]
+    
+    if(q == 1) fanfar <- out
+    if(q > 1) fanfar <- rbind(fanfar, out)
+  }
+  fanfar$shed <- shed
+  return(fanfar)
+}
+
+#experimental 4 hour
+#input <- 
+#test <- 
+  rbind(input_w3, input_fb, input_zz) %>%
+      filter(wshed == "FB") %>% mutate(
+             "day" = day(datetime),
+             "month" = month(datetime),
+             "year" = year(datetime)) %>% 
+      group_by(ID) %>%
+  mutate(group_id = rep(1:ceiling(n()/8), each = 8, length.out = n())) %>% 
+  ungroup() %>% 
+      group_by(group_id, ID) %>%
+      summarise(avg_state = mean(binary),
+                datetime = min(datetime)) %>% 
+      ungroup() %>% 
+      mutate(avg_state = round(avg_state)) %>% 
+      rename("binary" = avg_state) %>% 
+      #mutate("datetime" = ymd_hms(paste0(year,"-",month,"-",day," ",hour,":00:00"))) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+    arrange(datetime) %>% 
+      pivot_wider(names_from = ID, values_from = binary) %>% View()
+
+calculate_hierarchy(routes_w3, test, hours(4))
+iterate_groups("r_23", "r_2", test, hours(4))
+calc_support("r_7", "r_9", test)
+
+test$group <- cumsum(c(TRUE, diff(test$datetime) != hours(4)))
+
+
+  
+#experimental. daily
+  #input <- 
+    rbind(input_w3, input_fb, input_zz) %>%
+      filter(wshed == "W3") %>% 
+      mutate(
+             "day" = day(datetime),
+             "month" = month(datetime),
+             "year" = year(datetime)) %>% 
+      group_by(day, month, year, ID) %>%
+      summarise(avg_state = mean(binary)) %>% 
+      ungroup() %>% 
+      mutate(avg_state = round(avg_state)) %>% 
+      rename("binary" = avg_state) %>% 
+      mutate("datetime" = ymd_hms(paste0(year,"-",month,"-",day," ","00:00:00"))) %>% 
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+          arrange(datetime) %>% 
+      pivot_wider(names_from = ID, values_from = binary) %>% View()
+
+
+  #input <- 
+    rbind(input_w3, input_fb, input_zz) %>%
+      filter(wshed == "W3", mins %in% c(0, 30)) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+    
+    
+#original fantastic 4 components
+    #input <- 
+      rbind(input_w3, input_fb, input_zz) %>%
+      mutate(hour = hour(datetime)) %>% 
+      filter(wshed == "W3", hour %in% c(0,4,8,12,16,20,24), mins %in% c(0)) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+    timestep <- hours(4)
+  
+    #input <- 
+      rbind(input_w3, input_fb, input_zz) %>%
+      mutate(hour = hour(datetime)) %>% 
+      filter(wshed == "W3", hour %in% c(12), mins %in% c(0)) %>%
+      select(datetime, binary, ID) %>%
+      mutate(ID = paste0("r_", ID)) %>%
+      pivot_wider(names_from = ID, values_from = binary)
+      
+
+```
+
